# gcm

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.claude/: session-knowledge.yaml
.github/workflows/: ci.yml  release.yml
.lok/prompts/: design-draft-prompt.md  pre-pr-validation-prompt.md
.lok/workflows/: design-draft.toml  pre-pr-validation.toml
.pi/: AGENTS.md
.pi/agents/: README.md  claude-designer.md  codex-pre-pr.md  gemini-architect.md  ollama-rust-reviewer.md  ops-reviewer.md  security-reviewer.md
.pi/lessons/: clo-493-add-automation-surface-json-non-interactive-flags-structured-lessons.md  clo-514-secret-rule-pack-entropy-lessons.md  clo-531-resolve-lessons.md  clo-533-remote-mr-lessons.md  clo-534-gemini-schema-lessons.md  clo-535-resolve-newline-lessons.md  pr-review-failures.md
.pi/orchestrator/: README.md
.pi/skills/: pr-review-cycle.md
docs/: DEPENDENCIES.md  PROJECT.md  README.md  ROADMAP.md
docs/adrs/: 001-foundational-architecture-decisions.md  README.md
docs/design-docs/: 2026-06-20-clo-491-plan-cache.md  2026-06-22-clo-490-secret-scan-gcmignore.md
docs/designs/: clo-494-anthropic-provider.md  clo-496-onboarding-wizard.md  (+4 more)
scripts/: acceptance.sh  bump-formula.sh
specs/: 2026-06-23-clo-514-secret-rule-pack-entropy.md  2026-06-29-clo-517-ollama-cloud-plan-parse.md
src/: cache.rs  cli.rs  config.rs  debug.rs  diff.rs  error.rs  git.rs  groq.rs  main.rs  output.rs  paths.rs  plan.rs  privacy.rs  status.rs  ui.rs
tests/: onboarding.rs  provider.rs  resolve_integration.rs  resolve_remote.rs  status.rs  vertex.rs
(+249 files in other folders)
