[package]
name = "gcm"
version = "0.1.7"
edition = "2021"
description = "AI git commit tool: turns working-tree changes into a signed conventional commit"
license = "MIT"
repository = "https://github.com/maxkulish/gcm"
default-run = "gcm"

[[bin]]
name = "gcm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
tempfile = "3"
sha2 = "0.11.0"
# Interactive `gcm provider` wizard (CLO-516); same crates + lean feature flags as
# Goose's `goose configure`, so we get its diamond-marker UI / filter / spinner.
cliclack = { version = "0.5", default-features = false }
console = { version = "0.16", default-features = false, features = ["std"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
